--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,9 +1,17 @@
 # Use Ubuntu as our builder as it's more full featured
 FROM ubuntu:22.04 AS builder
-RUN apt-get update && apt-get -y install golang-go
+RUN apt-get update && apt-get -y install ca-certificates golang-go
 WORKDIR /tmp/build
 RUN mkdir ./src ./bin
 COPY app/*.go ./src/
+
+# Install Go dependencies
+RUN go mod init letsv-certchecker
+RUN go get github.com/aws/aws-sdk-go-v2/aws
+RUN go get github.com/aws/aws-sdk-go-v2/config
+RUN go get github.com/aws/aws-sdk-go-v2/service/ssm
+
+# Build our app
 RUN go build -o bin/letsv-certchecker src/letsv-certchecker.go
 
 
@@ -13,3 +21,4 @@ FROM alpine:3.18
 WORKDIR /opt/letsvalidate
 COPY --from=builder /tmp/build/bin/letsv-certchecker .
 ENTRYPOINT ["./letsv-certchecker"]
+
