About ready to try a PGSQL connection

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -7,7 +7,13 @@ COPY app/*.go ./src/
 
 # Create Go module so that "go get" words, and then install our Go dependencies 
 RUN go mod init letsv-certchecker
-RUN go get github.com/aws/aws-sdk-go-v2/aws github.com/aws/aws-sdk-go-v2/config github.com/aws/aws-sdk-go-v2/service/ssm
+
+# Was going to use lib/pq, but the maintainers are saying it's on ice:
+#   https://github.com/lib/pq
+# They point people towards pgx
+#   https://github.com/jackc/pgx
+RUN go get github.com/aws/aws-sdk-go-v2/aws github.com/aws/aws-sdk-go-v2/config \
+    github.com/aws/aws-sdk-go-v2/service/ssm github.com/jackc/pgx/v5
 
 # Build our app 
 RUN go build -o bin/letsv-certchecker src/letsv-certchecker.go
